--- a/Day2.ipynb
+++ b/Day2.ipynb
@@ -25,6 +25,18 @@
     "    answer=\"\".join(my_string)\n",
     "    return answer"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def solution(my_string, overwrite_string, s):\n",
+    "    o =len(overwrite_string)\n",
+    "    my_string=my_string[0:s]+overwrite_string+my_string[s+o:]\n",
+    "    return my_string"
+   ]
   }
  ],
  "metadata": {
