--- a/Day9.ipynb
+++ b/Day9.ipynb
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,7 +69,7 @@
     "    for i in range(len(my_string)):\n",
     "        answer.append(my_string[i:])\n",
     "    answer.sort() # 알파벳순 정렬\n",
-    "    return answer"
+    "    return answer\n"
    ]
   },
   {
