--- a/Day9.ipynb
+++ b/Day9.ipynb
@@ -30,6 +30,7 @@
     "    \n",
     "    return answer\n",
     "\n",
+    "# enumerate\n",
     "# 순서가 있는 자료형(list, set, tuple, dictionary, string)을 입력으로 받았을 때, 인덱스와 값을 포함하여 리턴\n",
     "# for문과 함께 자주 사용됨\n",
     "# 인덱스와 값을 동시에 접근하면서 루프를 돌리고 싶을 때 사용"
