--- a/Day17.ipynb
+++ b/Day17.ipynb
@@ -2,20 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'1'"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# 특정 문자열로 끝나는 가장 긴 부분 문자열 찾기\n",
     "\n",
@@ -26,6 +15,24 @@
     "    if patt in mystr:\n",
     "        idx=mystr.index(patt)\n",
     "        answer = mystr[idx:][::-1]\n",
+    "    return answer"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 문자열이 몇 번 등장하는지 세기\n",
+    "# \"banana\"\t, \"ana\" , 2\n",
+    "\n",
+    "def solution(myString, pat):\n",
+    "    answer = 0\n",
+    "    n=len(pat)\n",
+    "    for i in range(0,len(myString)-n+1):\n",
+    "        if myString[i:i+n]==pat:\n",
+    "            answer+=1\n",
     "    return answer"
    ]
   }
