--- a/Day17.ipynb
+++ b/Day17.ipynb
@@ -35,6 +35,22 @@
     "            answer+=1\n",
     "    return answer"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#ad가 속한 값은 리스트에서 제거\n",
+    "def solution(strArr):\n",
+    "    answer = []\n",
+    "    ad='ad'\n",
+    "    for i in strArr:\n",
+    "        if ad not in i:\n",
+    "            answer.append(i)   \n",
+    "    return answer"
+   ]
   }
  ],
  "metadata": {
