--- a/Day17.ipynb
+++ b/Day17.ipynb
@@ -51,6 +51,18 @@
     "            answer.append(i)   \n",
     "    return answer"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 문자열을 공백을 기준으로 나누기 : split()\n",
+    "def solution(my_string):\n",
+    "    answer = my_string.split(\" \")\n",
+    "    return answer"
+   ]
   }
  ],
  "metadata": {
