--- a/Day18.ipynb
+++ b/Day18.ipynb
@@ -2,13 +2,49 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "# \"43 + 12\" -> 55\n",
     "def solution(binomial):\n",
     "    answer = eval(binomial)\n",
+    "    return answer"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def solution(myString, pat):\n",
+    "    answer = ''\n",
+    "    for i in myString:\n",
+    "        if i == 'A':\n",
+    "            answer+='B'\n",
+    "        elif i == 'B':\n",
+    "            answer+='A'\n",
+    "    if pat in answer:\n",
+    "        answer=1\n",
+    "    else:\n",
+    "        answer=0\n",
+    "    return answer"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def solution(rny_string):\n",
+    "    answer = ''\n",
+    "    for i in rny_string:\n",
+    "        if i == 'm':\n",
+    "            answer+='rn'\n",
+    "        else:\n",
+    "            answer+=i\n",
     "    return answer"
    ]
   }
