--- a/Day19.ipynb
+++ b/Day19.ipynb
@@ -17,6 +17,21 @@
     "        an=[\"EMPTY\"]\n",
     "    return an"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import itertools\n",
+    "def solution(arr):\n",
+    "    answer = []\n",
+    "    for i in arr:\n",
+    "        answer.append([i]*i) # 값 반복\n",
+    "    answer=list(itertools.chain(*answer)) # 이중 리스트 -> 단일 리스트 itertools !\n",
+    "    return answer"
+   ]
   }
  ],
  "metadata": {
