--- a/Day19.ipynb
+++ b/Day19.ipynb
@@ -32,6 +32,24 @@
     "    answer=list(itertools.chain(*answer)) # 이중 리스트 -> 단일 리스트 itertools !\n",
     "    return answer"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def solution(arr, flag):\n",
+    "    answer = []\n",
+    "    for i, j in zip(arr,flag): # zip(a,b): a,b 둘다 순환\n",
+    "        if j == True:\n",
+    "            for k in range(2*i):\n",
+    "                answer.append(i)\n",
+    "        if j == False:\n",
+    "            for k in range(i):\n",
+    "                answer.pop()\n",
+    "    return answer\n"
+   ]
   }
  ],
  "metadata": {
