--- a/Day19.ipynb
+++ b/Day19.ipynb
@@ -50,6 +50,28 @@
     "                answer.pop()\n",
     "    return answer\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def solution(arr):\n",
+    "    stk = []\n",
+    "    i=0\n",
+    "    while i < len(arr):\n",
+    "        if len(stk) == 0:\n",
+    "            stk.append(arr[i])\n",
+    "            i+=1\n",
+    "        elif (len(stk) != 0)  and (stk[-1] == arr[i]):\n",
+    "            stk.pop()\n",
+    "            i+=1\n",
+    "        elif (len(stk) != 0)  and (stk[-1] != arr[i]):\n",
+    "            stk.append(arr[i])\n",
+    "            i+=1            \n",
+    "    return stk if stk else [-1]"
+   ]
   }
  ],
  "metadata": {
