--- a/Day19.ipynb
+++ b/Day19.ipynb
@@ -72,6 +72,24 @@
     "            i+=1            \n",
     "    return stk if stk else [-1]"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#무작위로 k개 뽑기\n",
+    "def solution(arr, k):\n",
+    "    ret = []\n",
+    "    for i in arr:\n",
+    "        if i not in ret:\n",
+    "            ret.append(i)\n",
+    "        if len(ret) == k:\n",
+    "            break\n",
+    "\n",
+    "    return ret + [-1] * (k - len(ret)) # 리스트에 요소 추가하기 +로 이루어짐"
+   ]
   }
  ],
  "metadata": {
