--- a/Day20.ipynb
+++ b/Day20.ipynb
@@ -11,6 +11,27 @@
     "        if len(arr) <= 2**i:\n",
     "            return arr + [0] * (2**i - len(arr))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def solution(arr1, arr2):\n",
+    "    answer = 0\n",
+    "    if len(arr1) > len(arr2):\n",
+    "        return 1\n",
+    "    elif len(arr1) < len(arr2):\n",
+    "        return -1\n",
+    "    elif len(arr1) == len(arr2):\n",
+    "        if sum(arr1) > sum(arr2):\n",
+    "            return 1\n",
+    "        elif sum(arr1) < sum(arr2):\n",
+    "            return -1\n",
+    "        else:\n",
+    "            return 0"
+   ]
   }
  ],
  "metadata": {
