--- a/Day20.ipynb
+++ b/Day20.ipynb
@@ -32,6 +32,23 @@
     "        else:\n",
     "            return 0"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 문자열 묶기\n",
+    "# 같은 문자열들끼리 그룹으로 묶었을 때 가장 개수가 많은 그룹의 크기를 return \n",
+    "def solution(strArr):\n",
+    "    answer = [len(i) for i in strArr]\n",
+    "    tmp = []\n",
+    "    for i in set(answer):\n",
+    "        tmp.append(answer.count(i))\n",
+    "    \n",
+    "    return max(tmp)"
+   ]
   }
  ],
  "metadata": {
